여러가지 수정
급여관리 - 식대 수정 가능하게, 불러오기로 식대까지 불러오게, 불러올때 합계 계산되게 수정
항목관리 - 식대 항목 제거
일정 - 노선별 프린트 수정, 출/퇴근 갯수 나오는 부분 RegularlyDispatchData로 수정

--- a/dispatch/templates/dispatch/regularly_route.html
+++ b/dispatch/templates/dispatch/regularly_route.html
@@ -453,10 +453,17 @@
   const groupCreateChangeForm = document.querySelector(".groupCreate")
 
   function groupCreateDeleteUrl() {
+    {% autoescape off %}
     if (confirm("선택한 그룹을 정말로 삭제하시겠습니까?")){
-      groupCreateChangeForm.action = "{% url 'dispatch:regularly_group_delete' %}"
-      groupCreateChangeForm.submit()
+      if ('{{order_list.exists}}' == 'False') {
+        groupCreateChangeForm.action = "{% url 'dispatch:regularly_group_delete' %}"
+        groupCreateChangeForm.submit()
+      }
+      else {
+        window.alert('그룹의 노선을 비워주세요')
+      }
     }
+    {% endautoescape %}
   }
 
   const routeTr = document.querySelectorAll(".RouteListBodyTr")
