--- a/templates/base.html
+++ b/templates/base.html
@@ -327,7 +327,7 @@
                     </div>
                 </div>
                 <div class="popupFooter">
-                    <input autocomplete="off"type="submit" class="btnModules HomeEditBtn" value="저장">
+                    <div class="btnModules HomeEditBtn">저장</div>
                     <div class="btnModules HomeCloseBtn">닫기</div>
                 </div>
             </div>
