--- a/humanresource/templates/HR/salary_list.html
+++ b/humanresource/templates/HR/salary_list.html
@@ -20,6 +20,11 @@
         <input autocomplete="off" name='month' value="{{month}}" type="month" class="search-Form_input search-Form_input-Month">
         <label for="" class="search-Form_label">이름 : </label>
         <input autocomplete="off" name="name" value="{{name}}" type="text" class="search-Form_input">
+        <select class="inputModules marginLeft2" name="type">
+            <option {% if search_type == "" %} selected {% endif %} value="">구분</option>
+            <option {% if search_type == "일반" %} selected {% endif %} value="일반">일반</option>
+            <option {% if search_type == "용역" %} selected {% endif %} value="용역">용역</option>
+        </select>
         <input type="submit" class="search-Form_search-btn" value="검색">
     </form>
     <div class="popup-area-box">
@@ -46,6 +51,7 @@
                     <td class="table-list_head-tr_td">입사일자</td>
                     <td class="table-list_head-tr_td">기본급</td>
                     <td class="table-list_head-tr_td">근속수당</td>
+                    <td class="table-list_head-tr_td">연차수당</td>
                     <td class="table-list_head-tr_td">직급수당</td>
                     <td class="table-list_head-tr_td">식대</td>
                     <td class="table-list_head-tr_td">출근수당</td>
@@ -80,6 +86,9 @@
                         <input type="text" class="amountInput length100" value="{{salary.service_allowance}}">
                     </td>
                     <td class="table-list_body-tr_td">
+                        <input type="text" class="amountInput length100" value="{{salary.annual_allowance}}">
+                    </td>
+                    <td class="table-list_body-tr_td">
                         <input type="text" class="amountInput length100" value="{{salary.position_allowance}}">
                     </td>
                     <td class="table-list_body-tr_td">
@@ -105,6 +114,7 @@
       <tbody>
         <tr class="table-list_body-tr totalSalaryList">
           <td class="table-list_body-tr_td" colspan="4">합계</td>
+          <td class="table-list_body-tr_td"></td>
           <td class="table-list_body-tr_td"></td>
           <td class="table-list_body-tr_td"></td>
           <td class="table-list_body-tr_td"></td>
@@ -309,7 +319,7 @@
 
 
     function loadPrevMonthlyBase() {
-        if (confirm('저번달 기본급, 근속수당, 직급수당을 불러오시겠습니까?')) {
+        if (confirm('저번달 기본급, 근속수당, 연차수당, 직급수당, 식대를 불러오시겠습니까?')) {
             loadForm.action = "{% url 'HR:salary_load' %}"
             loadForm.submit()
         }
