--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -798,12 +798,14 @@
     const driverObj = {{ driver_dict }}
     const outsourcingObj = {{ outsourcing_dict }}
     const client = {{ client }}
+    const contractStatus = "{{ detail.contract_status }}"
     console.log("DATA", data)
     console.log("DATA2", data2)
     console.log("driverObj", driverObj);
     console.log("outsourcingObj", outsourcingObj);
     console.log('dataList', dataList);
     console.log('client', {{client}})
+    console.log('contractStatus', contractStatus)
     {% endautoescape %}
 </script>
 <script>
