회원가입 약관 페이지 살림, 운행확인 페이지 복구, ip저장 삭제

--- a/crudmember/templates/crudmember/signup.html
+++ b/crudmember/templates/crudmember/signup.html
@@ -38,7 +38,8 @@
       </div>
     </div>
 
-    <form method="POST" action="{% url 'crudmember:signup' %}">
+    <!-- <form method="POST" action="{% url 'crudmember:signup' %}"> -->
+    <form>
       {%csrf_token%}
       <div class="signupSection">
         <div class="inputCell">
