--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,9 @@
                 <a href="{% url 'dispatch:regularly_route' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">출/퇴근 노선관리</li>
                 </a>
+                <a href="{% url 'dispatch:schedule' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">운행확인</li>
+                </a>
               </ul>
             </div>
           </div>
